src/rules/pydocstyle/snapshots/ruff__pydocstyle__tests__D208_D.py.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind:
    NoOverIndentation: ~
  location:
    row: 252
    column: 0
  end_location:
    row: 252
    column: 0
  fix:
    content: "    "
    location:
      row: 252
      column: 0
    end_location:
      row: 252
      column: 7
  parent: ~
- kind:
    NoOverIndentation: ~
  location:
    row: 264
    column: 0
  end_location:
    row: 264
    column: 0
  fix:
    content: "    "
    location:
      row: 264
      column: 0
    end_location:
      row: 264
      column: 8
  parent: ~
- kind:
    NoOverIndentation: ~
  location:
    row: 272
    column: 0
  end_location:
    row: 272
    column: 0
  fix:
    content: "    "
    location:
      row: 272
      column: 0
    end_location:
      row: 272
      column: 8
  parent: ~

