src/rules/pydocstyle/snapshots/ruff__pydocstyle__tests__D212_D.py.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind:
    MultiLineSummaryFirstLine: ~
  location:
    row: 129
    column: 4
  end_location:
    row: 131
    column: 7
  fix: ~
  parent: ~

