src/rules/pydocstyle/snapshots/ruff__pydocstyle__tests__D406_sections.py.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind:
    NewLineAfterSectionName: Returns
  location:
    row: 30
    column: 4
  end_location:
    row: 36
    column: 7
  fix:
    content: ""
    location:
      row: 32
      column: 11
    end_location:
      row: 32
      column: 12
  parent: ~
- kind:
    NewLineAfterSectionName: Raises
  location:
    row: 207
    column: 4
  end_location:
    row: 221
    column: 7
  fix:
    content: ""
    location:
      row: 218
      column: 10
    end_location:
      row: 218
      column: 11
  parent: ~
- kind:
    NewLineAfterSectionName: Returns
  location:
    row: 252
    column: 4
  end_location:
    row: 262
    column: 7
  fix:
    content: ""
    location:
      row: 257
      column: 11
    end_location:
      row: 257
      column: 12
  parent: ~
- kind:
    NewLineAfterSectionName: Raises
  location:
    row: 252
    column: 4
  end_location:
    row: 262
    column: 7
  fix:
    content: ""
    location:
      row: 259
      column: 10
    end_location:
      row: 259
      column: 11
  parent: ~

